--- a/index.html
+++ b/index.html
@@ -1208,129 +1208,125 @@
 /* ====== Fungsi Monitor (Live) — kekal struktur sedia ada ====== */
 
 // === KONFIG & UTIL ===
-const POLL_MS = 7000; // refresh setiap 7s
-let monitorTimer = null;
+(function () {
+  const POLL_MS = 7000; // refresh setiap 7s
+  let monitorTimer = null;
 
-function showPage(id){
-  // sembunyikan semua .page, tunjuk satu
-  document.querySelectorAll('.page').forEach(p=> p.style.display='none');
-  const el = document.getElementById(id);
-  if (el) el.style.display = '';
-}
-
-function todayIso(){
-  const d=new Date();
-  const mm=('0'+(d.getMonth()+1)).slice(-2);
-  const dd=('0'+d.getDate()).slice(-2);
-  return d.getFullYear()+'-'+mm+'-'+dd;
-}
-
-// === MONITOR VIEW ===
-async function showMonitorAll(){
-  // masuk skrin
-  showPage('monitorAllSection');
-  const dateInput = document.getElementById('monitorDate');
-  if (!dateInput.value) dateInput.value = todayIso();
-  await loadMonitor(); // first load
-  startMonitorPolling();
-}
-
-function startMonitorPolling(){
-  stopMonitorPolling();
-  monitorTimer = setInterval(loadMonitor, POLL_MS);
-}
-function stopMonitorPolling(){
-  if (monitorTimer) { clearInterval(monitorTimer); monitorTimer=null; }
-}
-async function refreshMonitorNow(){
-  await loadMonitor(true);
-}
-
-async function loadMonitor(force=false){
-  try{
-    const dateIso = document.getElementById('monitorDate')?.value || todayIso();
-    // Guna helper API (bawa id_token)
-    const json = await apiGet('getNadiMonitor', { date: dateIso });
-    if (json.status!=='success') throw new Error(json.message||'Gagal ambil monitor');
-
-    // Info bar
-    document.getElementById('monitorInfo').textContent =
-      `Tarikh: ${json.date} • Auto refresh setiap ${(POLL_MS/1000)}s`;
-
-    renderMonitorCards(json.data||[]);
-  }catch(err){
-    console.error(err);
-    document.getElementById('monitorInfo').textContent = 'Ralat memuat data monitor.';
+  function showPage(id){
+    document.querySelectorAll('.page').forEach(p=> p.style.display='none');
+    const el = document.getElementById(id);
+    if (el) el.style.display = '';
   }
-}
 
-function renderMonitorCards(list){
-  const wrap = document.getElementById('monitorCards');
-  if (!wrap) return;
-  if (!list.length){
-    wrap.innerHTML = `<div class="col-12"><div class="alert alert-info">Tiada sesi pada tarikh ini.</div></div>`;
-    return;
+  function todayIso(){
+    const d=new Date();
+    const mm=('0'+(d.getMonth()+1)).slice(-2);
+    const dd=('0'+d.getDate()).slice(-2);
+    return d.getFullYear()+'-'+mm+'-'+dd;
   }
-  wrap.innerHTML = list.map(item=>{
-    const c = item.counts||{layak:0,takLayak:0,total:0};
-    return `
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="card shadow-sm monitor-card">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-start">
-              <div>
-                <div class="fw-bold">${escapeHtml(item.title||'-')}</div>
-                <div class="text-muted small">${escapeHtml(item.programDate||'')}</div>
-                <div class="text-muted small">ID: ${escapeHtml(item.activityId||'')}</div>
+
+  // === MONITOR VIEW ===
+  async function showMonitorAll(){
+    showPage('monitorAllSection');
+    const dateInput = document.getElementById('monitorDate');
+    if (!dateInput.value) dateInput.value = todayIso();
+    await loadMonitor(); // first load
+    startMonitorPolling();
+  }
+
+  function startMonitorPolling(){
+    stopMonitorPolling();
+    monitorTimer = setInterval(loadMonitor, POLL_MS);
+  }
+
+  function stopMonitorPolling(){
+    if (monitorTimer) { clearInterval(monitorTimer); monitorTimer=null; }
+  }
+
+  async function refreshMonitorNow(){
+    await loadMonitor(true);
+  }
+
+  async function loadMonitor(force=false){
+    try{
+      const dateIso = document.getElementById('monitorDate')?.value || todayIso();
+      const json = await apiGet('getNadiMonitor', { date: dateIso }); // guna helper AUTH sedia ada
+      if (json.status!=='success') throw new Error(json.message||'Gagal ambil monitor');
+
+      document.getElementById('monitorInfo').textContent =
+        `Tarikh: ${json.date} • Auto refresh setiap ${(POLL_MS/1000)}s`;
+
+      renderMonitorCards(json.data||[]);
+    }catch(err){
+      console.error(err);
+      document.getElementById('monitorInfo').textContent = 'Ralat memuat data monitor.';
+    }
+  }
+
+  function renderMonitorCards(list){
+    const wrap = document.getElementById('monitorCards');
+    if (!wrap) return;
+    if (!list.length){
+      wrap.innerHTML = `<div class="col-12"><div class="alert alert-info">Tiada sesi pada tarikh ini.</div></div>`;
+      return;
+    }
+    wrap.innerHTML = list.map(item=>{
+      const c = item.counts||{layak:0,takLayak:0,total:0};
+      return `
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card shadow-sm monitor-card">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-start">
+                <div>
+                  <div class="fw-bold">${escapeHtml(item.title||'-')}</div>
+                  <div class="text-muted small">${escapeHtml(item.programDate||'')}</div>
+                  <div class="text-muted small">ID: ${escapeHtml(item.activityId||'')}</div>
+                </div>
+                <button class="btn btn-sm btn-outline-secondary" onclick="openSessionDetail('${item.activityId}')">Buka</button>
               </div>
-              <button class="btn btn-sm btn-outline-secondary" onclick="openSessionDetail('${item.activityId}')">Buka</button>
-            </div>
-            <hr>
-            <div class="row text-center">
-              <div class="col">
-                <div class="stat">${c.layak||0}</div>
-                <div class="label">Layak</div>
-              </div>
-              <div class="col">
-                <div class="stat">${c.takLayak||0}</div>
-                <div class="label">Tidak Layak</div>
-              </div>
-              <div class="col">
-                <div class="stat">${c.total||0}</div>
-                <div class="label">Jumlah</div>
+              <hr>
+              <div class="row text-center">
+                <div class="col">
+                  <div class="stat">${c.layak||0}</div>
+                  <div class="label">Layak</div>
+                </div>
+                <div class="col">
+                  <div class="stat">${c.takLayak||0}</div>
+                  <div class="label">Tidak Layak</div>
+                </div>
+                <div class="col">
+                  <div class="stat">${c.total||0}</div>
+                  <div class="label">Jumlah</div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>`;
-  }).join('');
-}
+        </div>`;
+    }).join('');
+  }
 
-// OPTIONAL: bila klik "Buka" pada kad → terus filter ke sesi tersebut jika anda ada UI detail
-function openSessionDetail(activityId){
-  // Contoh: jika anda sudah ada halaman “Program PEKAB40 bersama NADI”
-  // dan fungsi `activateFromHash` untuk buka panel detail,
-  // anda boleh set hash begini:
-  location.hash = '#nadi?activityId='+encodeURIComponent(activityId);
-  // atau terus tukar ke tab asal anda di sini, jika perlu:
-  // showPage('programNadiSection'); ... dan panggil loader detail dengan activityId
-};
+  function openSessionDetail(activityId){
+    location.hash = '#nadi?activityId='+encodeURIComponent(activityId);
+  }
 
-// helper elak XSS (global untuk bahagian Monitor)
-function escapeHtml(s){
-  return String(s||'').replace(/[&<>"'`=\/]/g, function (c) {
-    return {'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;','/':'&#x2F;','`':'&#x60;','=':'&#x3D;'}[c];
+  // helper elak XSS (skop tempatan)
+  function escapeHtml(s){
+    return String(s||'').replace(/[&<>"'`=\/]/g, function (c) {
+      return {'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;','/':'&#x2F;','`':'&#x60;','=':'&#x3D;'}[c];
+    });
+  }
+
+  // Event wiring dalam IIFE
+  window.addEventListener('hashchange', ()=>{
+    const onMonitor = location.hash.includes('#monitor');
+    if (!onMonitor) stopMonitorPolling();
   });
-}
+  document.getElementById('btnMonitorAll')?.addEventListener('click', showMonitorAll);
 
-// Hentikan polling bila tukar hash (jika anda pakai hash untuk navigasi)
-window.addEventListener('hashchange', ()=>{
-  const onMonitor = location.hash.includes('#monitor');
-  if (!onMonitor) stopMonitorPolling();
-});
-
-// Wayarkan butang "Monitor Semua (Live)"
-document.getElementById('btnMonitorAll')?.addEventListener('click', showMonitorAll);
+  // Eksport hanya yang diperlukan oleh HTML
+  window.refreshMonitorNow = refreshMonitorNow;
+  window.openSessionDetail = openSessionDetail;
+})();
 
   // ---------- Render ----------
   function renderRows(items) {
