--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
   window.addEventListener('hashchange', ()=>{ const onMonitor = location.hash.includes('#monitor'); if (!onMonitor) stopMonitorPolling(); });
 
   // Tarikh semasa di header
-  document.getElementById('current-date').textContent = new Date().toLocaleDateString('ms-MY', { weekday:'long', day:'2-digit', month:'long', year:'numeric' });
+  document.getElementById('current-date').textContent = new Date().toLocaleDateString('ms-MY', { weekday:'long', day:'2-digit', month:'long', year:'numeric' })
  max-width: 500px; background: white; border-radius: 12px; padding: 20px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin: 0 auto;
   }
